--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
     "date-fns": "^2.15.0",
+    "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "request": "^2.88.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
