--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development --host 0.0.0.0 --disable-host-check --useLocalIp",
+    "start": "webpack-dev-server --hot --mode development --host 0.0.0.0 --disable-host-check --useLocalIp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +25,7 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
+    "autoautocomplete": "^1.0.3",
     "date-fns": "^2.15.0",
     "express": "^4.17.1",
     "react": "^16.13.1",
